[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-weave-printer"
version = "0.1.0"
description = "Convert ConversationIR to various formats (Markdown, PDF, HTML)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "dragon"}
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
cwprint = "chatweave_printer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatweave_printer*"]
